<resources>
    <string name="app_name">SaigakTiming</string>

    <string name="err_member_already_exists">This member already exists</string>
    <string name="err_required_field">Required field</string>
    <string name="err_value_must_be_between_1_and_5">Value must be between 1 and 5</string>
    <string name="err_value_must_be_gt_0">Value must be greater than 0</string>

    <string name="title_members">Members</string>
    <string name="title_archive">Archive</string>
    <string name="title_sensors">Sensors</string>
    <string name="edit">Edit</string>
    <string name="add_member">Add member</string>
    <string name="new_member">New member</string>
    <string name="added">Added</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="check">Check</string>
    <string name="save">Save</string>
    <string name="competition_protocol">Competition protocol</string>
    <string name="protocol">Protocol</string>
    <string name="member_list">Members</string>
    <string name="finish">Finish</string>
    <string name="result">Result</string>
    <string name="track">Track</string>
    <string name="track_results">Track results:</string>
    <string name="track_count">Track count</string>
    <string name="to_the_end_of_list">To the end of list</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="start_time">Start time</string>
    <string name="finish_time">Finish time</string>
    <string name="start_date">Start date</string>

    <string name="start_uppercase">START</string>
    <string name="time_over">Time over</string>
    <string name="resume">Resume</string>
    <string name="number_sign">#</string>
    <string name="total_time">Total time:</string>
    <string name="track_max_time_minutes">Track max time (minutes)</string>
    <string name="colon">:</string>
    <string name="time">Time</string>
    <string name="penalty">Penalty</string>
    <string name="penalty_seconds">Penalty seconds</string>
    <string name="auto_pause_between_tracks">Auto pause between tracks</string>
    <string name="to_archive">To archive…</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="starts">Starts</string>
    <string name="imitation_mode">Imitation mode</string>
    <string name="sync_time">Sync time</string>
    <string name="sensors_search">Search of sensors</string>
    <string name="clear">Clear</string>

</resources>