<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_event">

    <fragment
        android:id="@+id/navigation_event"
        android:name="ru.axcheb.saigaktiming.ui.event.EventFragment"
        android:label="@string/title_members"
        tools:layout="@layout/event_fragment">
        <action
            android:id="@+id/action_navigation_event_to_memberResultFragment"
            app:destination="@id/memberResultFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.axcheb.saigaktiming.ui.dashboard.DashboardFragment"
        android:label="@string/title_archive"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.axcheb.saigaktiming.ui.notifications.NotificationsFragment"
        android:label="@string/title_sensors"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/memberResultFragment"
        android:name="ru.axcheb.saigaktiming.ui.start.StartFragment"
        tools:layout="@layout/start_fragment">
        <argument android:name="eventId" app:argType="long" />
        <argument android:name="memberId" app:argType="long" />
    </fragment>

</navigation>