<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.start.StartFragment">

    <data>

        <import type="ru.axcheb.saigaktiming.data.DataBindingConverters" />

        <variable
            name="viewModel"
            type="ru.axcheb.saigaktiming.ui.start.StartViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back_24"
                app:title="@string/starts" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/member_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_view_margin"
            android:layout_marginEnd="@dimen/default_view_margin"
            android:text="@{viewModel.member.name}"
            android:textAppearance="?attr/textAppearanceHeadline3"
            tools:text="Иван Иванов" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/penalty_seconds_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_view_margin"
            android:layout_marginEnd="@dimen/default_view_margin"
            app:errorEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/penalty_seconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/penalty_seconds"
                android:inputType="numberDecimal"
                android:text="@={DataBindingConverters.intToStr(viewModel.penaltySeconds)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/default_view_margin"
            android:layout_marginEnd="@dimen/default_view_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/total_time"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.totalTimeStr}"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold|italic"
                tools:text="02:05.321" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/dividerHorizontal" />

        <!-- header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/check"
                android:layout_width="26dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/default_view_margin"
                android:contentDescription="@string/check"
                android:src="@drawable/ic_check_24" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/dividerVertical" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/number_sign"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/dividerVertical" />

            <TextView
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/dividerVertical" />

            <TextView
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/dividerVertical" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/result"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/dividerVertical" />

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/default_view_margin" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/dividerHorizontal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/start_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/start_item" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_view_margin"
            android:text="@string/start"
            android:enabled="@{viewModel.isStartEnabled()}"
            app:icon="@drawable/ic_start_arrow_24"
            app:iconGravity="textEnd" />

    </LinearLayout>
</layout>