<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true"
    tools:context=".ui.finish.FinishActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ru.axcheb.saigaktiming.ui.finish.FinishViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/member_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_view_margin"
            android:layout_marginEnd="@dimen/default_view_margin"
            android:gravity="center_horizontal"
            android:text='@{viewModel.member != null ? viewModel.member.name : ""}'
            android:textAppearance="?attr/textAppearanceHeadline3"
            tools:text="Иван Иванов" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_view_margin"
                android:text="@string/next"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="italic"
                android:visibility="@{viewModel.nextMember == null ? View.INVISIBLE : View.VISIBLE}" />

            <TextView
                android:id="@+id/next_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:text='@{viewModel.nextMember != null ? viewModel.nextMember.name : ""}'
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold|italic"
                tools:text="Александр Петров" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/timer_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="@{viewModel.isTimerCardVisible ? View.VISIBLE : View.GONE }"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/default_view_margin"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:text="@{viewModel.timerStr}"
                android:textSize="50sp"
                tools:text="01:23" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/event_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:id="@+id/buttons_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:visibility="@{viewModel.isTimerRunnable ? View.VISIBLE : View.GONE }">

                <Button
                    android:id="@+id/next_btn"
                    style="@style/bar_button_style"
                    android:text="@string/next"
                    app:icon="@drawable/ic_keyboard_arrow_right_24" />

                <Button
                    android:id="@+id/pause_btn"
                    style="@style/bar_button_style"
                    android:enabled="@{viewModel.isPauseEnabled}"
                    android:text="@string/pause"
                    android:visibility="@{viewModel.pauseOrResume ? View.VISIBLE : View.GONE }"
                    app:icon="@drawable/ic_pause_24" />

                <Button
                    android:id="@+id/resume_btn"
                    style="@style/bar_button_style"
                    android:text="@string/resume"
                    android:visibility="@{viewModel.pauseOrResume ? View.GONE : View.VISIBLE }"
                    app:icon="@drawable/ic_start_arrow_24"
                    tools:enabled="false" />

                <Button
                    android:id="@+id/to_end_btn"
                    style="@style/bar_button_style"
                    android:enabled="@{viewModel.isToEndEnabled}"
                    android:text="@string/to_the_end_of_list"
                    app:icon="@drawable/ic_arrow_downward_24" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_view_margin"
                android:text="@string/start_time"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:text="@{viewModel.startTimeStr}"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold|italic"
                tools:text="12:05:21.593" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/dividerHorizontal" />

        <!-- header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/check"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/default_view_margin"
                android:contentDescription="@string/check"
                android:src="@drawable/ic_check_24" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/dividerVertical" />

            <TextView
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/track"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/dividerVertical" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/finish"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/dividerVertical" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/result"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/dividerHorizontal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/finish_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/finish_item" />


    </LinearLayout>

</layout>