<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="ru.axcheb.saigaktiming.ui.memberselect.NewMemberViewModel" />
        <variable
            name="vm"
            type="ru.axcheb.saigaktiming.ui.memberselect.NewMemberViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_close_24"
                    app:title="@string/new_member" />

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_view_margin"
                android:layout_marginEnd="@dimen/default_view_margin"
                app:errorEnabled="true"
                app:errorMsg="@{vm.errorMsg}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:text="@={vm.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_member_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/default_view_margin"
                android:layout_marginEnd="@dimen/default_view_margin"
                android:text="@string/add" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>